app/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa
  namespace: default
spec:
  containers:
    - name: opa
      image: nginx:1.15.0
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
