app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
  name: test-app
  namespace: test
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test-app
  type: ClusterIP
