app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: test-app
  name: test-app
  namespace: test
spec:
  rules:
  - host: test.de
    http:
      paths:
      - backend:
          serviceName: test-app
          servicePort: http
        path: test(/|$)(.*)
